tests/errors/poisoning/type-no-member.fn
---
Description: Member access where the type has no such field
Expected: compile error
---

type Vector2
{
    x: f32
    y: f32

    init(x: f32, y: f32)
    {
        this.x = x
        this.y = y
    }
}

type Program
{
    fn Main -> i32
    {
        var v = Vector2(1.0, 2.0)
        var x = v.nonexistent_field
        return 0
    }
}
